--- a/template.yaml
+++ b/template.yaml
@@ -1,8 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: |-
-  test-sam-nodejs
-  Sample SAM Template for test-sam-nodejs
+Description: Demo bulding order processing application using SAM
 
 Parameters:
   JWTIssuerParameter:
